--- a/Studentaddress.html
+++ b/Studentaddress.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <div class="logo">
-            <!-- <img src="https://mir-s3-cdn-cf.behance.net/projects/404/8da29d84916351.Y3JvcCwzMDE5LDIzNjIsODIsMA.jpg"> -->
+            <img src="https://mir-s3-cdn-cf.behance.net/projects/404/8da29d84916351.Y3JvcCwzMDE5LDIzNjIsODIsMA.jpg">
         </div>
         <div class="link">
             <a href="index.html">Home</a>
